--- a/astra-factory/Cargo.toml
+++ b/astra-factory/Cargo.toml
@@ -11,7 +11,7 @@ license = { workspace = true }
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-near-sdk = { version = "4.0.0-pre.4", features = ["unstable"]  }
+near-sdk.workspace = true
 
 [dev-dependencies]
-near-sdk-sim = "4.0.0-pre.4"
+near-sdk-sim.workspace = true
