--- a/astra/Cargo.toml
+++ b/astra/Cargo.toml
@@ -12,15 +12,15 @@ license = { workspace = true }
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
-near-contract-standards = "4.0.0-pre.4"
-hex = "0.4.2"
+near-sdk.workspace = true
+near-contract-standards.workspace = true
+hex.workspace = true
 
 [dependencies.serde_with]
 version = "1.4.0"
 
 [dev-dependencies]
-near-sdk-sim = "4.0.0-pre.4"
+near-sdk-sim.workspace = true
 test-token = { path = "../test-token" }
 astra-staking = { path = "../astra-staking" }
 astra-factory = { path = "../astra-factory" }
