--- a/test-token/Cargo.toml
+++ b/test-token/Cargo.toml
@@ -8,7 +8,6 @@ publish = false
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-
 [dependencies]
-near-sdk = "4.0.0-pre.4"
-near-contract-standards = "4.0.0-pre.4"
+near-sdk.workspace = true
+near-contract-standards.workspace = true
