--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,6 @@ overflow-checks = true
 [workspace.dependencies]
 near-sdk = "^4.1.1"
 near-contract-standards = "^4.1.1"
-near-sdk-sim = "4.0.0-pre.9"
 uint = { version = "^0.9.5", default-features = false }
 serde_json = "^1.0"
 hex = "0.4.2"
@@ -37,6 +36,7 @@ hex = "0.4.2"
 # https://doc.rust-lang.org/cargo/reference/workspaces.html
 anyhow = "1.0.72"
 tokio = { version = "1.29.1", features = ["full"] }
+near-sdk-sim = "3.2.0"
 workspaces = "0.7.0"
 near-primitives = "0.17.0"
 near-units = "0.2.0"
