--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 license = "MIT"
 repository = "https://github.com/near-ndc/astra"
 authors = [
-    "Astra Devs <near-daos@protonmail.com>",
+    "Sputnik Devs <near-daos@protonmail.com>",
     "NDC GWG (https://near.social/#/mob.near/widget/ProfilePage?accountId=govworkinggroup.near)",
 ]
 
