--- a/astra/Cargo.toml
+++ b/astra/Cargo.toml
@@ -20,7 +20,7 @@ hex.workspace = true
 version = "1.4.0"
 
 [dev-dependencies]
-near-sdk-sim.workspace = true
+workspaces.workspace = true
 test-token = { path = "../test-token" }
 astra-staking = { path = "../astra-staking" }
 astra-factory = { path = "../astra-factory" }
