[Astra] Update repo to the latest near-sdk and related deps (#2)
* move dependency

* update dependency

* external call changes

* near units

* remove ext

--- a/astra-staking/Cargo.toml
+++ b/astra-staking/Cargo.toml
@@ -13,10 +13,11 @@ license = { workspace = true }
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-near-sdk = "4.0.0-pre.4"
-near-contract-standards = "4.0.0-pre.4"
-hex = "0.4.2"
+near-sdk.workspace = true
+near-contract-standards.workspace = true
+hex.workspace = true
 
 [dev-dependencies]
-near-sdk-sim = "4.0.0-pre.4"
+workspaces.workspace = true
 test-token = { path = "../test-token" }
+near-units.workspace = true
