--- a/astra/Cargo.toml
+++ b/astra/Cargo.toml
@@ -22,6 +22,8 @@ version = "1.4.0"
 [dev-dependencies]
 workspaces.workspace = true
 near-units.workspace = true
+tokio.workspace = true
+anyhow.workspace = true
 test-token = { path = "../test-token" }
 astra-staking = { path = "../astra-staking" }
 astra-factory = { path = "../astra-factory" }
