--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,22 @@ jobs:
       - name: Build
         env:
           IS_GITHUB_ACTION: true
+        run: cd astra
+        run: cargo build --release --target wasm32-unknown-unknown
+      - name: Wasm copy and strip
+        run: |
+          find target/wasm32-unknown-unknown/release \
+            -maxdepth 1 \
+            -name \*.wasm \
+            -prune \
+            -exec cp {} res \;
+          for f in res/*.wasm
+          do
+            wasm-opt -Oz -o "$f" "$f"
+          done 
+      - name: Build
+        env:
+          IS_GITHUB_ACTION: true
         run: cargo +stable build --workspace --target wasm32-unknown-unknown --release
       - name: Run Cargo tests
         env:
