--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,16 @@ jobs:
         env:
           IS_GITHUB_ACTION: true
         run: cd astra && cargo build --release --target wasm32-unknown-unknown
+      # downloads/installs any extra requirements
+      #
+      # binaryen, which is used to reduce the contract's size.
+      # based on:
+      # https://github.com/rustwasm/walrus/blob/9d6c9de432d6a97478dc76ebdf18aed51584c3af/.github/workflows/main.yml#L56
+      - name: Install binaryen
+        run: |
+          set -e
+          curl -L https://github.com/WebAssembly/binaryen/releases/download/version_105/binaryen-version_105-x86_64-linux.tar.gz | tar xzf -
+          echo "`pwd`/binaryen-version_105/bin" >> $GITHUB_PATH
       - name: Wasm copy and strip
         run: |
           find target/wasm32-unknown-unknown/release \
