--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build
         env:
           IS_GITHUB_ACTION: true
-        run: cd astra && cargo build --release --target wasm32-unknown-unknown
+        run: mkdir res && cd astra && cargo build --release --target wasm32-unknown-unknown
       # downloads/installs any extra requirements
       #
       # binaryen, which is used to reduce the contract's size.
