--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
           IS_GITHUB_ACTION: true
         run: |
           mkdir res && cd astra && cargo build --release --target wasm32-unknown-unknown
-          cp target/wasm32-unknown-unknown/release/astra.wasm res
+          cp ../target/wasm32-unknown-unknown/release/astra.wasm res
       - name: Build
         env:
           IS_GITHUB_ACTION: true
