--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,14 +21,14 @@ jobs:
         env:
           IS_GITHUB_ACTION: true
         run: |
-          mkdir res && cd astra && cargo build --release --target wasm32-unknown-unknown
-          cd .. && cp target/wasm32-unknown-unknown/release/astra.wasm res
+          mkdir res && cd astra && RUSTFLAGS='-C link-arg=-s' cargo build --target wasm32-unknown-unknown --release
+          cd .. && cp target/wasm32-unknown-unknown/release/astra.wasm res/
       - name: Build
         env:
           IS_GITHUB_ACTION: true
-        run: cargo +stable build --workspace --target wasm32-unknown-unknown --release
+        run: cargo build --workspace --target wasm32-unknown-unknown --release
       - name: Wasm copy
-        run: cp target/wasm32-unknown-unknown/release/*.wasm res
+        run: cp target/wasm32-unknown-unknown/release/*.wasm res/
 
       - name: Run Cargo tests
         env:
