--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,9 +82,9 @@ jobs:
           path: target/x86_64-unknown-linux-gnu
           key: ubuntu-latest-stable-cargo-release-target-${{ hashFiles('**/Cargo.toml') }}
       - name: Build
-        run: mkdir res && cd astra && cargo build --release --target wasm32-unknown-unknown
+        run: mkdir res && cd astra && RUSTFLAGS='-C link-arg=-s' cargo build --target wasm32-unknown-unknown --release
       - name: Wasm copy
-        run: cp target/wasm32-unknown-unknown/release/astra.wasm res
+        run: cp target/wasm32-unknown-unknown/release/astra.wasm res/
       # downloads/installs any extra requirements
       #
       # binaryen, which is used to reduce the contract's size.
