--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,21 +20,9 @@ jobs:
       - name: Build
         env:
           IS_GITHUB_ACTION: true
-        run: |
-          mkdir res && cd astra && RUSTFLAGS='-C link-arg=-s' cargo build --target wasm32-unknown-unknown --release
-          cd .. && cp target/wasm32-unknown-unknown/release/astra.wasm res/
-      - name: Build
-        env:
-          IS_GITHUB_ACTION: true
-        run: cargo build --workspace --target wasm32-unknown-unknown --release
-      - name: Wasm copy
-        run: cp target/wasm32-unknown-unknown/release/*.wasm res/
+        run: sh build.sh
 
       - name: Run Cargo tests
         env:
           IS_GITHUB_ACTION: true
         run: cargo test --workspace -- --nocapture
-      # - name: Run Ava tests
-      #   env:
-      #     IS_GITHUB_ACTION: true
-      #   run: cd astra && sh test.sh
