--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,31 +1,43 @@
-name: Tests
+name: Rust
+
 on:
-  push:
-    branches:
-      - master
   pull_request:
+    branches: [master, main]
+  merge_group:
+  push:
+    branches: ["master"]
+
+concurrency:
+  group: ci-${{ github.ref }}-${{ github.workflow }}
+  cancel-in-progress: true
+
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
-  tests:
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.platform }}
+  test:
+    runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v3
+      - uses: technote-space/get-diff-action@v6.1.2
         with:
-          toolchain: stable
-          target: wasm32-unknown-unknown
+          PATTERNS: |
+            **/**.rs
+            Cargo.lock
+      - name: Install latest nightly
+        if: env.GIT_DIFF
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.69.0
+          override: true
+          components: rustfmt, clippy
+
+      - name: Install wasm32 toolchain
+        if: env.GIT_DIFF
+        run: rustup target add wasm32-unknown-unknown
       - name: Build
-        env:
-          IS_GITHUB_ACTION: true
-        run: cargo +stable build --workspace --target wasm32-unknown-unknown --release
+        run: sh build.sh
+
       - name: Run Cargo tests
-        env:
-          IS_GITHUB_ACTION: true
         run: cargo test --workspace -- --nocapture
-      - name: Run Ava tests
-        env:
-          IS_GITHUB_ACTION: true
-        run: cd astra && sh test.sh
