--- a/astra/Cargo.toml
+++ b/astra/Cargo.toml
@@ -15,6 +15,9 @@ crate-type = ["cdylib", "rlib"]
 near-sdk.workspace = true
 near-contract-standards.workspace = true
 hex.workspace = true
+serde_json.workspace = true
+
+common = { path = "../common" }
 
 [dependencies.serde_with]
 version = "1.4.0"
